--- a/src/style/main.css
+++ b/src/style/main.css
@@ -42,7 +42,7 @@
     background-color: #fff;
     text-shadow: none;
     border-bottom: solid #ff7503 0.7cap;
-    max-width: 1300px !important;
+    max-width: 97% !important;
 }
 
 .TypographyInMenu {
