--- a/src/style/main.css
+++ b/src/style/main.css
@@ -23,7 +23,7 @@
     border-radius: 3px;
 }
 
-.titleImageSlider{
+.titleImageSlider {
     font-size: 1.5rem;
 }
 
@@ -303,7 +303,7 @@
 
 .footerBox {
     width: 100%;
-    height: 34rem;
+    height: 17rem;
     background-color: #000;
     padding: 2rem 3rem 2rem 3rem;
 }
@@ -315,13 +315,8 @@
     direction: rtl !important;
 }
 
-.tableInFooter {
-    border-bottom: solid 2px #fff;
-    margin-bottom: 1.5rem;
-}
-
-.lineHeight{
-    line-height:  5px !important;
+.lineHeight {
+    line-height: 5px !important;
 }
 
 .socialInFooter {
@@ -581,13 +576,13 @@
     font-size: large !important;
 }
 
-.FontParagraphArticle{
+.FontParagraphArticle {
     font-size: 1.2rem;
 }
 
 .titleFirstProduct {
     margin: 0px 23px 5rem;
-    font-size:x-large;
+    font-size: x-large;
     color: #000;
     direction: rtl;
 }
@@ -639,4 +634,14 @@
     font-size: larger;
     font-weight: bold;
     margin-top: 1.5rem;
+}
+
+.rowFooter {
+    display: inline;
+    padding: 1rem;
+    font-size: 1rem;
+    color: #fff;
+}
+
+.rowFooterBox {
 }
