--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,7 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+    font-family: 'Nazanin';
+    src: local('Nazanin'), url(./font/Nazanin.ttf), format('truetype');
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
 
 html,
 body,
@@ -101,8 +92,7 @@ video {
     vertical-align: baseline;
 }
 
- HTML5 display-role reset for older browsers 
-article,
+HTML5 display-role reset for older browsers article,
 aside,
 details,
 figcaption,
@@ -117,10 +107,12 @@ section {
 }
 
 body {
-    line-height: 1; 
-    font-size: 10px;
-    /* background-image: linear-gradient(to bottom right, #cce6ff, #eeffcc) !important;
-    height: 100vh; */
+    line-height: 1;
+    margin: 0 !important;
+    padding: 0 !important;
+    height: 100vh !important;
+    overflow-x: hidden !important;
+    font-family: Nazanin;
 }
 
 ol,
