--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,7 @@ body {
     margin: 0 !important;
     padding: 0 !important;
     height: 100vh !important;
+    /* width: 1300px !important; */
     overflow-x: hidden !important;
     font-family: Nazanin;
 }
